--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,7 +7,7 @@
           <h4 class="mb-0">Eform Maker</h4>
         </div>
 
-        <h5 class="mb-1">Welcome back 👋</h5>
+        <h5 class="mb-1">Welcome back</h5>
         <p class="mb-4 text-body-secondary">Sign in to continue to Eform Maker</p>
 
         {{#if error}}
