--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,7 +2,7 @@
 <html
   lang="en"
   dir="ltr"
-  class="layout-navbar-fixed layout-horizontal layout-navbar-full layout-without-menu"
+  class="layout-navbar-fixed layout-horizontal layout-navbar-full layout-without-menu layout-menu-fixed layout-compact"
   data-bs-theme="light"
   data-skin="default"
   data-assets-path="/assets/"
@@ -77,6 +77,9 @@
     <!-- Vuexy menu/boot -->
     <script src="/assets/vendor/js/menu.js"></script>
     <script src="/assets/js/main.js"></script>
+
+    <!-- App-level helpers -->
+    <script src="/js/app.js"></script>
 
     <!-- intl-tel-input (JS) once -->
     <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@18.2.1/build/js/intlTelInput.min.js"></script>
