--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -27,7 +27,7 @@
 
         {{!-- User --}}
         <li class="nav-item navbar-dropdown dropdown-user dropdown">
-          <a class="nav-link dropdown-toggle hide-arrow p-0" href="javascript:void(0);" data-bs-toggle="dropdown">
+          <a class="nav-link dropdown-toggle hide-arrow p-0" href="javascript:void(0);" data-bs-toggle="dropdown" data-bs-container="body">
             <div class="avatar avatar-online">
               <img src="/assets/img/avatars/1.png" alt class="rounded-circle" />
             </div>
