Fix: hide default value for time-related fields

--- a/views/builder.hbs
+++ b/views/builder.hbs
@@ -83,7 +83,7 @@
             <input id="editOptions" type="text" class="form-control" placeholder="Option 1, Option 2">
           </div>
 
-          <div class="mb-3">
+          <div class="mb-3" id="editValueRow">
             <label for="editValue" class="form-label">Default Value</label>
             <input id="editValue" type="text" class="form-control" placeholder="(optional)">
           </div>
